Homework section 4 completed

--- a/public/babatunde.html
+++ b/public/babatunde.html
@@ -1,4 +1,16 @@
-<h1>Welcome to my Home Page </h1>
+
+
+<html>
+  <body>
+    <h1>Hello there</h1>
+    <p>
+      <h3> Hoe are you doing today?</h3>
+      <p>Am sure you are doing good</p>
+      <a href='http://google.com'>This is a link to google</a>
+    </p>
+    <hr />
+    <div>
+      <h1>Welcome to my Home Page </h1>
 <div>
   <p>I am Babatunde  Alli</p>
   <ul>
@@ -9,3 +21,12 @@
     
   </ul>
 </div>
+
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+    </div>
+  </body>
+</html>
