--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,19 @@
-<h1> Hello</h1>
+
+
+<html>
+  <body>
+    <h1>Hello there</h1>
+    <p>
+      <h3> Hoe are you doing today?</h3>
+      <p>Am sure you are doing good</p>
+      <a href='http://google.com'>This is a link to google</a>
+    </p>
+    <hr />
+    <div>
+      <h1> Hello</h1>
 <p>
   The time is now:
-  2015-07-12 15:07:20 +0100
+  2015-07-12 15:53:18 +0100
 </p>
 
 <p>
@@ -9,3 +21,12 @@
   
 </p>
 
+
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+    </div>
+  </body>
+</html>
