--- a/public/me.html
+++ b/public/me.html
@@ -1,1 +1,21 @@
-foo
+
+
+<html>
+  <body>
+    <h1>Hello there</h1>
+    <p>
+      <h3> Hoe are you doing today?</h3>
+      <p>Am sure you are doing good</p>
+      <a href='http://google.com'>This is a link to google</a>
+    </p>
+    <hr />
+    <div>
+      foo
+    </div>
+    <hr />
+    <div>
+      <h3> I'm a footer</h3>
+      <p>Put things in the footer</p>
+    </div>
+  </body>
+</html>
